# aws-hack-day

./: CLAUDE.md
backend/: .env.example  README.md  add_gsi.py  check_collections.py  direct_test.py  example.py  load_mock_data.py  load_mock_data_fixed.py  load_mock_dynamo.py  manual_api_test.py  pyproject.toml  query_test.py  query_tickets_test.py  simple_server.py  simple_test.py  simple_ticket_test.py  test_agent.py  test_dynamodb.py  test_ticket_flow.py  test_weaviate.py  update_existing_tickets.py
backend/src/: categorization_agent.py  config.py  dynamodb_client.py  main.py  openai_service.py  solution_agent.py  types.py  weaviate_client.py  weviate_service.py
data/: pyproject.toml
data/src/: main.py
docs-and-mock-data/: CLAUDE.md  company-profile.md  mock-issues-dataset.json  problem-categories.md
docs-and-mock-data/docs/faqs/: booking-reservations-faq.md  host-seller-faq.md  payment-billing-faq.md  property-stay-faq.md  (+1 more)
docs-and-mock-data/mock-issues/: booking-reservation-issues.json  host-seller-issues.json  payment-billing-issues.json  property-stay-issues.json  technical-app-issues.json
frontend/: package-lock.json  package.json
frontend-submit-ticket/: package.json
frontend-submit-ticket/app/: actions.ts  page.tsx
frontend-submit-ticket/components/: ticket-form.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  create-ticket-dialog.tsx  ticket-detail-dialog.tsx  ticket-table.tsx
frontend/data/: categories.json  tickets.json
frontend/hooks/: use-local-storage.ts
frontend/src/: index.html  main.jsx
(+12 files in other folders)
