[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data"
version = "0.1.0"
description = "Data processing service"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
] 